--- a/block_info.css
+++ b/block_info.css
@@ -3,19 +3,12 @@
     width: 400px;
     height: 400px;
 }
-/* .main-block::after{
-    width: 100px;
-    content: "";
-    height: 100px;
-    background: brown;
-    display: block;
-    position: absolute;
-    left: 500px;
-}
 
-.main-block:hover{
-    background: green;
-} */
+.main-block *{
+    transition-property: background;
+    transition-duration: 0.5s;
+    display: block;
+}
 
 .first{
     background: white;
@@ -23,13 +16,11 @@
     height: 60%;
     position: relative;
     float: left;
-    display: block;
 }
 
 .second{
     background: yellow;
     position: relative;
-    display: block;
     float: right;
     top: 0;
     width: 50%;
@@ -37,33 +28,25 @@
 }
 
 .thrid{
-    background: green;
     width: 100%;
     height: 40%;
     float: left;
 }
-.thrid::after{
+.thrid, .thrid > .a, .thrid > .b{
+    background: green;
+}
+.thrid > .a{
     height: 40%;
     width: 40%;
-    background-color: #bbb;
     border-radius: 50%;
-    content: "";
-    display: block;
-    top: 0%;
+    top: 80%;
     left: 10%;
     position: relative;
 }
-.thrid::before{
-    content: "";
-    background-color: #bbb;
-    display: block;
+.thrid > .b{
     width: 40%;
     height: 75%;
     position: relative;
     left: 60%;
-    top: -75%;
-}
-
-.thrid:hover{
-    background: greenyellow;
+    top: -115%;
 }
