--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
 }
-.arduino-nano, .servo, .raspberry, .solar-panel, .mq135, .dht11, .white-led-strip, 
-.relay, .l296, .rgb-led-strip, .rip-sensor, .rs485-ttl, .arduino-nano-rs485-block {
+.arduino-nano, .rs485-ttl, .arduino-nano-rs485-block,
+.raspberry-rs485-block, .rasspberry, .rs485-usb{
     display: block;
     position: relative;
     transition-property: opacity;
@@ -27,10 +27,20 @@
     cursor: pointer;
 }
 
-.arduino-nano:hover, .servo:hover, .raspberry:hover, .solar-panel:hover, .mq135:hover, 
-.dht11:hover, .white-led-strip:hover, .relay:hover, .l296:hover, .rgb-led-strip:hover,
-.rip-sensor:hover {
-    /* opacity: 0.7; */
+.rasspberry{
+    background: green;
+    height: 70%;
+}
+.rs485-usb{
+    background: greenyellow;
+    height: 30%;
+    width: 70%;
+}
+.raspberry-rs485-block{
+    width: 8%;
+    height: 15%;
+    left: 1%;
+    top: -7%;
 }
 
 .arduino-nano{
@@ -54,10 +64,10 @@
     top: 15%; left: 1%;
 }
 .arduino-nano-rs485-block-3{
-    top: 30%; left: 1%;
+    top: 25%; left: 1%;
 }
 .arduino-nano-rs485-block-4{
-    top: 45%; left: 1%;
+    top: 35%; left: 1%;
 }
 .arduino-nano-rs485-block-5{
     top: -40%; left: 90%;
@@ -70,54 +80,4 @@
 }
 .arduino-nano-rs485-block-8{
     top: 1%; left: 90%;
-}
-
-
-.servo{
-    background: rgb(56, 56, 148);
-}
-.servo-first{
-    top: 15.3%; left: 1%;
-}
-.servo-second{
-    top: 27.2%; left: 1%;
-}
-
-.raspberry{
-    background: rgb(27, 133, 41);
-    top: 38.5%;
-    left: 1%;
-}
-
-.solar-panel{
-    background: rgb(6, 6, 51);
-    color: white;
-}
-
-.mq135{
-    background: rgb(31, 31, 31);
-    color: white;
-}
-
-.dht11{
-    background: rgb(161, 161, 255);
-}
-
-.white-led-strip{
-    background: rgb(112, 112, 134);
-}
-
-.relay{
-    background: rgb(183, 115, 238);
-}
-
-.l296{
-    background: rgb(153, 8, 8);
-}
-
-.rip-sensor{
-    background: yellowgreen;
-}
-.rgb-led-strip{
-    background: aquamarine;
 }
