--- a/style.css
+++ b/style.css
@@ -18,15 +18,26 @@
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
 }
+
 .arduino-nano, .rs485-ttl, .arduino-nano-rs485-block,
-.raspberry-rs485-block, .rasspberry, .rs485-usb{
+.raspberry-rs485-block, .rasspberry, .rs485-usb, .wifi-ds18b20-block, .wifi, .ds18b20{
     display: block;
     position: relative;
     transition-property: opacity;
     transition-duration: 0.3s;
     cursor: pointer;
+    font-size: 8px;
 }
 
+.wifi{
+    background: white;
+    height: 60%;
+}
+.ds18b20{
+    height: 40%;
+    width: 70%;
+    background: whitesmoke;
+}
 .rasspberry{
     background: green;
     height: 70%;
@@ -35,12 +46,6 @@
     background: greenyellow;
     height: 30%;
     width: 70%;
-}
-.raspberry-rs485-block{
-    width: 8%;
-    height: 15%;
-    left: 1%;
-    top: -7%;
 }
 
 .arduino-nano{
@@ -53,6 +58,20 @@
     width: 70%;
 }
 
+
+.wifi-ds18b20-block{
+    width: 8%;
+    height: 8%;
+    left: 1%;
+    top: -36%;
+}
+.raspberry-rs485-block{
+    width: 8%;
+    height: 15%;
+    left: 1%;
+    top: -7%;
+}
+
 .arduino-nano-rs485-block{
     width: 8%;
     height: 11%;
@@ -61,13 +80,13 @@
     top: 5%; left: 1%;
 }
 .arduino-nano-rs485-block-2{
-    top: 15%; left: 1%;
+    top: 8%; left: 1%;
 }
 .arduino-nano-rs485-block-3{
-    top: 25%; left: 1%;
+    top: 12%; left: 1%;
 }
 .arduino-nano-rs485-block-4{
-    top: 35%; left: 1%;
+    top: 18%; left: 1%;
 }
 .arduino-nano-rs485-block-5{
     top: -40%; left: 90%;
