--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 }
 .arduino-nano, .rs485-ttl, .raspberry, .rs485-usb,  .wifi, .ds18b20,
 .solar-panel, .solar-panel-voltage, .solar-panel-amperage, .global-voltage,
-.global-amperage, .reley
+.global-amperage, .reley, .main-door, .sg90-servo
 {
     display: block;
     position: relative;
@@ -31,10 +31,31 @@
     font-size: 8px;
 }
 .arduino-nano-rs485-block, .wifi-ds18b20-block, .solar-panel-a-v-module,
-.raspberry-rs485-block, .global-a-v-block
+.raspberry-rs485-block, .global-a-v-block, .main-door-servo-block
 {
     display: block;
     position: relative;
+}
+
+/*main door sg90*/
+.main-door-servo-block{
+    top: -78.5%;
+    left: 44%;
+    width: 8%;
+    height: 2%;
+}
+.main-door{
+    width: 69%;
+    float: left;
+    height: 100%;
+    background: yellow;
+}
+.sg90-servo{
+    width: 29%;
+    margin-right: 1%;
+    height: 100%;
+    background: rgb(255, 255, 159);
+    float: left;
 }
 
 /*reley*/
