--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@
 }
 .arduino-nano, .rs485-ttl, .raspberry, .rs485-usb,  .wifi, .ds18b20,
 .solar-panel, .solar-panel-voltage, .solar-panel-amperage, .global-voltage,
-.global-amperage, .reley, .main-door, .sg90-servo
+.global-amperage, .reley, .main-door, .sg90-servo, .garage-door, .laser-receiver,
+.laser
 {
     display: block;
     position: relative;
@@ -31,10 +32,19 @@
     font-size: 8px;
 }
 .arduino-nano-rs485-block, .wifi-ds18b20-block, .solar-panel-a-v-module,
-.raspberry-rs485-block, .global-a-v-block, .main-door-servo-block
+.raspberry-rs485-block, .global-a-v-block, .main-door-servo-block,
+.garage-input-block
 {
     display: block;
     position: relative;
+}
+
+/*garage door block*/
+.garage-input-block{
+    top: -100%;
+}
+.garage-input-block .sg90-servo{
+    
 }
 
 /*main door sg90*/
@@ -50,7 +60,7 @@
     height: 100%;
     background: yellow;
 }
-.sg90-servo{
+.main-door-servo-block .sg90-servo{
     width: 29%;
     margin-right: 1%;
     height: 100%;
