--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-/*main part*/
 .main{
-    background: rgb(209, 209, 209);
+    background: rgb(233, 233, 233);
     width: 700px;
     height: 450px;
     position: absolute;
@@ -12,7 +11,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: rgb(209, 209, 209) url("images/layout.svg");
+    background: rgb(233, 233, 233) url("images/layout.svg");
     background-size: cover;
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -33,18 +32,60 @@
 }
 .arduino-nano-rs485-block, .wifi-ds18b20-block, .solar-panel-a-v-module,
 .raspberry-rs485-block, .global-a-v-block, .main-door-servo-block,
-.garage-input-block
+.garage-input-block, .garage-door-block
 {
     display: block;
     position: relative;
 }
 
+/*general*/
+.sg90-servo{
+    background: rgb(255, 255, 159);
+}
+.reley{
+    background: rgb(173, 197, 126);
+    top: -68%;
+    left: 65%;
+    width: 10%;
+    height: 8%;
+    transform: rotate(-10deg);
+    -webkit-transform: rotate(-10deg);
+}
+
 /*garage door block*/
 .garage-input-block{
-    top: -100%;
+    top: -164%;
+    width: 10%;
+    height: 6%;
+    left: 65%;
+}
+.garage-door-block{
+    top: -18%;
 }
 .garage-input-block .sg90-servo{
-    
+    width: 30%;
+    float: left;
+    left: 133%;
+}
+.garage-input-block .garage-door{
+    background: yellow;
+    float: left;
+    width: 160%;
+    left: -21%;
+}
+.garage-input-block .laser-receiver{
+    background: red;
+    float: left;
+    width: 20%;
+    height: 10%;
+    left: 130%;
+}
+.garage-input-block .laser{
+    background: rgb(218, 132, 132);
+    float: left;
+    width: 20%;
+    height: 10%;
+    left: -60%;
 }
 
 /*main door sg90*/
@@ -64,19 +105,8 @@
     width: 29%;
     margin-right: 1%;
     height: 100%;
-    background: rgb(255, 255, 159);
+    
     float: left;
-}
-
-/*reley*/
-.reley{
-    background: rgb(173, 197, 126);
-    top: -68%;
-    left: 65%;
-    width: 10%;
-    height: 8%;
-    transform: rotate(-10deg);
-    -webkit-transform: rotate(-10deg);
 }
 
 /*global amperage and voltage block*/
