--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
 .arduino-nano, .rs485-ttl, .raspberry, .rs485-usb,  .wifi, .ds18b20,
 .solar-panel, .solar-panel-voltage, .solar-panel-amperage, .global-voltage,
 .global-amperage, .reley, .main-door, .sg90-servo, .garage-door, .laser-receiver,
-.laser, .window
+.laser, .window, .mg135-air, .pir
 {
     display: block;
     position: relative;
@@ -32,7 +32,7 @@
 }
 .arduino-nano-rs485-block, .wifi-ds18b20-block, .solar-panel-a-v-module,
 .raspberry-rs485-block, .global-a-v-block, .main-door-servo-block,
-.garage-input-block, .garage-door-block
+.garage-input-block, .garage-door-block, .window-servo-pir-block
 {
     display: block;
     position: relative;
@@ -41,6 +41,9 @@
 /*general*/
 .sg90-servo{
     background: rgb(255, 255, 159);
+}
+.pir{
+    background: rebeccapurple;
 }
 .reley{
     background: rgb(173, 197, 126);
@@ -51,22 +54,52 @@
     transform: rotate(-10deg);
     -webkit-transform: rotate(-10deg);
 }
+.mg135-air{
+    background: turquoise;
+    width: 8%;
+    height: 6%;
+    top: -81%;
+    left: 14%;
+}
 .window{
     background: tomato;
-    width: 10%;
-    height: 3%;
+}
+
+/*window servo pir block*/
+.window-servo-pir-block{
+    top: -120%;
+    left: 74.5%;
+    width: 15%;
+    height: 2%;
     transform: rotate(-90deg);
     -webkit-transform: rotate(-90deg);
 }
+.window-servo-pir-block .window{
+    height: 100%;
+    width: 60%;
+    float: left;
+}
+.window-servo-pir-block .sg90-servo{
+    height: 100%;
+    width: 20%;
+    float: left;
+    top: -100%;
+}
+.window-servo-pir-block .pir{
+    height: 100%;
+    width: 20%;
+    float: left;
+    top: -100%;
+}
 
 /*windows*/
-.window-first{
-    top: -110%;
-    left: 76.8%;
-}
 .window-second{
-    top: -107%;
-    left: 13%;
+    top: -109%;
+    left: 13.6%;
+    transform: rotate(-90deg);
+    -webkit-transform: rotate(-90deg);
+    width: 9%;
+    height: 2%;
 }
 
 /*garage door block*/
