update solar panel image

--- a/style.css
+++ b/style.css
@@ -70,7 +70,6 @@
     background: rgb(165, 165, 165);
 }
 .solar-panel-amperage{
-    color: white;
     background: rgb(73, 73, 73);
 }
 .solar-panel-voltage{
@@ -78,7 +77,17 @@
 }
 .solar-panel{
     background: black;
-    color: white;
+}
+.solar-panel:before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: black url("images/solar_panel.png"); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-size: 160% 100%;
+    background-position: 50%;
 }
 .wifi{
     background: white;
@@ -107,7 +116,6 @@
 }
 .garage-door{
     background: yellow;
-    color: black;
 }
 .air-pipe{
     background: blue;
@@ -136,7 +144,7 @@
 
 /* lights block */
 .lights-block{
-    top: -123%;
+    top: -133%;
     left: 30%;
     width: 10%;
     height: 10%;
@@ -173,7 +181,7 @@
 /* ventilation */
 .ventilation-block{
     z-index: 0;
-    top: -133%;
+    top: -143%;
     left: 40.8%;
     width: 10%;
     height: 10%;
@@ -232,7 +240,7 @@
 
 /* door s90 pir */
 .door-s90-pir2-block{
-    top: -125.5%;
+    top: -135.5%;
     left: 22.5%;
     width: 15%;
     height: 2%;
@@ -259,7 +267,7 @@
 
 /* out of house */
 .reley{
-    top: -65%;
+    top: -74%;
     left: 65%;
     width: 10%;
     height: 8%;
@@ -269,13 +277,13 @@
 .mg135-air{
     width: 8%;
     height: 6%;
-    top: -77%;
+    top: -86%;
     left: 14%;
 }
 
 /* servo rfid block */
 .servo-rfid-block{
-    top: -97.3%;
+    top: -107.3%;
     left: 63%;
     width: 4%;
     height: 4%;
@@ -291,7 +299,7 @@
 
 /* window servo pir block */
 .window-servo-pir-block{
-    top: -115%;
+    top: -125%;
     left: 74.5%;
     width: 15%;
     height: 2%;
@@ -328,7 +336,7 @@
 
 /* garage door block */
 .garage-input-block{
-    top: -160.9%;
+    top: -170.9%;
     width: 10%;
     height: 6%;
     left: 65%;
@@ -362,7 +370,7 @@
 
 /* main door sg90 */
 .main-door-servo-block{
-    top: -73.5%;
+    top: -83.5%;
     left: 44%;
     width: 8%;
     height: 2%;
@@ -388,8 +396,8 @@
     margin-left: 2%;
 }
 .global-a-v-block{
-    top: -55%;
-    left: 42%;
+    top: -63%;
+    left: 48%;
     width: 12%;
     height: 6%;
 }
@@ -397,17 +405,17 @@
 /* solar panel block */
 .solar-panel-a-v-module{
     width: 17%;
-    height: 35%;
+    height: 45%;
     left: 39%;
     top: -100%;
 }
 .solar-panel{
-    height: 75%;
+    height: 80%;
     width: 100%;
     float: left;
 }
 .solar-panel-amperage, .solar-panel-voltage{
-    height: 25%;
+    height: 20%;
     width: 50%;
     float: left;
 }
