--- a/style.css
+++ b/style.css
@@ -65,6 +65,8 @@
     background-size: 100% 100%;
     background-position-x: 50%;
     background-position-y: -10%;
+
+    opacity: 0.8;
 }
 
 /*colors(images)*/
@@ -82,102 +84,295 @@
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
 }
+
 .rs485-ttl{
     background: rgb(151, 0, 189);
 }
+.rs485-ttl:before{
+    top: -24.5%;
+    left: 18.367346%;
+    width: 67%;
+    height: 149%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+
+    -webkit-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
 .sg90-servo{
     background: rgb(255, 255, 159);
 }
+.sg90-servo:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .pir{
     background: rebeccapurple;
 }
+.pir:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .laser{
     background: rgb(218, 132, 132);
 }
+.laser:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .window{
     background: tomato;
 }
+.window:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .laser-receiver{
     background: red;
 }
+.laser-receiver:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .global-amperage{
     background: grey;
 }
+.global-amperage:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .global-voltage{
     background: rgb(165, 165, 165);
 }
+.global-voltage:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .solar-panel-amperage{
     background: rgb(73, 73, 73);
 }
+.solar-panel-amperage:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .solar-panel-voltage{
     background: rgb(150, 150, 150);
 }
+.solar-panel-voltage:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .solar-panel{
     background: black;
 }
 .solar-panel:before{
-    content: "";
-    position: absolute;
     width: 100%;
     height: 100%;
     background: black url("images/solar_panel.png"); 
-    background-size: cover;
-    background-repeat: no-repeat;
     background-size: 160% 100%;
     background-position: 50%;
 }
+
 .wifi{
     background: white;
 }
+.wifi:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .ds18b20{
     background: whitesmoke;
 }
+.ds18b20:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .raspberry{
     background: green;
 }
+.raspberry:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .rs485-usb{
     background: greenyellow;
 }
+.rs485-usb:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .reley{
     background: rgb(173, 197, 126);
 }
+.reley:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .mg135-air{
     background: turquoise;
 }
+.mg135-air:before{
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .rfid-rc522{
     background: indianred;
 }
+.rfid-rc522:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .door{
     background: brown;
     color: white;
 }
+.door:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .garage-door{
     background: yellow;
 }
+.garage-door:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .air-pipe{
     background: blue;
 }
+.air-pipe:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .dht22{
     background: wheat;
 }
+.dht22:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .peltye{
     background: fuchsia;
 }
+.peltye:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .dht11{
     background: darkcyan;
 }
+.dht11:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .sun-light{
     background: rgb(218, 218, 149);
 }
+.sun-light{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .white-led-strip{
     background: white;
 }
+.white-led-strip:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .rgb-led-strip{
     background: darkolivegreen;
 }
+.rgb-led-strip:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 .light-sensor{
     background: darkorchid;
 }
+.light-sensor:before{
+    width: 100%;
+    height: 100%;
+    background: rgb(151, 0, 189) url("images/test.jpg"); 
+    background-size: 100% 100%;
+}
+
 
 /* lights block */
 .lights-block{
@@ -227,7 +422,7 @@
     height: 25%;
 }
 .air-pipe-1{
-    width: 159%;
+    width: 158%;
     top: -463%;
     left: -200%;
 }
@@ -257,21 +452,21 @@
     top: -76%;
 }
 .peltye{
-    width: 40%;
-    height: 30%;
-    top: -615%;
+    width: 20%;
+    height: 10%;
+    top: -604%;
     left: -180%;
 }
 .ventilation-block .dht11{
-    width: 30%;
-    height: 30%;
+    width: 20%;
+    height: 20%;
 }
 .ventilation-block .dht11-1{
-    top: -598%;
+    top: -579%;
     left: -222%;
 }
 .ventilation-block .dht11-2{
-    top: -64%;
+    top: -35%;
     left: -58%;
 }
 
@@ -288,17 +483,17 @@
     float: left;
 }
 .door-s90-pir2-block .sg90-servo{
-    width: 20%;
+    width: 14%;
     height: 100%;
     float: left;
     top: -100%;
-    left: -15%;
+    left: -10%;
 }
 .door-s90-pir2-block .pir{
     width: 20%;
     height: 100%;
     top: -100%;
-    left: -15%;
+    left: -11%;
     float: left;
 }
 
@@ -322,7 +517,7 @@
 .servo-rfid-block{
     top: -107.3%;
     left: 63%;
-    width: 4%;
+    width: 2.2%;
     height: 4%;
 }
 .servo-rfid-block .sg90-servo{
@@ -350,7 +545,7 @@
 }
 .window-servo-pir-block .sg90-servo{
     height: 100%;
-    width: 20%;
+    width: 12%;
     float: left;
     top: -100%;
 }
@@ -379,10 +574,11 @@
     left: 65%;
 }
 .garage-input-block .sg90-servo{
-    width: 30%;
-    height: 45%;
+    width: 20%;
+    height: 35%;
     float: left;
-    left: 133%;
+    top: 12%;
+    left: 145%;
 }
 .garage-input-block .garage-door{
     float: left;
@@ -393,16 +589,16 @@
 .garage-input-block .laser-receiver{
     float: left;
     width: 20%;
-    height: 45%;
+    height: 30%;
     left: 130%;
-    top: 30%;
+    top: 50%;
 }
 .garage-input-block .laser{
     float: left;
     width: 20%;
-    height: 45%;
+    height: 30%;
     left: -60%;
-    top: 30%;
+    top: 50%;
 }
 
 /* main door sg90 */
